--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
           <a class="nav-link" href="#">Products</a>
           <a class="nav-link" href="#">About</a>
           <a class="nav-link" href="#">Contact</a>
-
-
         </div>
       </div>
     </div>
@@ -82,37 +80,37 @@
     <h2>Trending....</h2><br>
     <div id="slider" class="owl-carousel">
 
-      <div class="card">
-        <img src="./Pic/pexels-jordan-hyde-1032110.jpg" alt="">
+      <div class="cards">
+        <img class="img-responsive" src="./Pic/pexels-jordan-hyde-1032110.jpg" alt="">
+        <small>Yeezy</small>
+        <small>£90</small>
+        <button>View More</button>
+      </div>
+
+      <div class="cards">
+        <img class="img-responsive" src="./Pic/sneakers-1280.jpg" alt="">
         <small>Jordan</small>
         <small>£90</small>
         <button>View More</button>
       </div>
 
-      <div class="card">
-        <img src="./Pic/sneakers-1280.jpg" alt="">
+      <div class="cards">
+        <img class="img-responsive" src="./Pic/nike-5099508_1280.jpg" alt="">
+        <small>Nike</small>
+        <small>£90</small>
+        <button>View More</button>
+      </div>
+
+      <div class="cards">
+        <img class="img-responsive" src="./Pic/pexels-photo-8283583.jpeg" alt="">
         <small>Jordan</small>
         <small>£90</small>
         <button>View More</button>
       </div>
 
-      <div class="card">
-        <img src="./Pic/nike-5099508_1280.jpg" alt="">
-        <small>Jordan</small>
-        <small>£90</small>
-        <button>View More</button>
-      </div>
-
-      <div class="card">
-        <img src="./Pic/pexels-photo-8283583.jpeg" alt="">
-        <small>Jordan</small>
-        <small>£90</small>
-        <button>View More</button>
-      </div>
-
-      <div class="card">
-        <img src="./Pic/pexels-jordan-hyde-1032110.jpg" alt="">
-        <small>Jordan</small>
+      <div class="cards">
+        <img class="img-responsive" src="./Pic/feet-1840619_1280.jpg" alt="">
+        <small>Nike</small>
         <small>£90</small>
         <button>View More</button>
       </div>
@@ -137,7 +135,7 @@
       <h4>Shopping with HIVE</h4>
       <small>Size Guides</small>
       <small>Find Store</small>
-      <small>My Orders</small>
+      <small>My Order</small>
     </div>
     <div class="logo-footer">
       <h4>Customer Care</h4>
@@ -147,9 +145,9 @@
     </div>
     <div class="logo-footer">
       <h4>Follow Us</h4>
-      <i class="fab fa-facebook-square"></i>
-      <i class="fab fa-twitter-square"></i>
-      <i class="fab fa-instagram"></i>
+      <small><i class="fab fa-facebook-square"></i></small>
+      <small><i class="fab fa-twitter-square"></i></small>
+      <small><i class="fab fa-instagram"></i></small>
     </div>
   </div>
 
