--- a/index.html
+++ b/index.html
@@ -159,33 +159,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-
-  <script>
-    $(document).ready(function() {
-      $('.owl-carousel').owlCarousel({
-        responsiveBaseElement: 'body',
-        responsiveClass: true,
-        loop: true,
-        margin: 10,
-        nav: true,
-        autoplay: false,
-        autoplayTimeout: 5000,
-        responsive: {
-          0: {
-            items: 1
-          },
-          600: {
-            items: 2
-          },
-          1000: {
-            items: 3
-          }
-
-        }
-      })
-    });
-  </script>
+  <script src="./index.js"></script>
 
 </body>
 
