--- a/shoes.html
+++ b/shoes.html
@@ -79,7 +79,6 @@
           <li data-tab-target="#nike"><img src="./Pic/icons8-nike-100.png"></li>
           <li data-tab-target="#puma"><img src="./Pic/puma .png"></li>
           <li data-tab-target="#converse"><img src="./Pic/converse.png"></li>
-          <li data-tab-target="#reebok"><img src="./Pic/reebok.png"></li>
           <li data-tab-target="#dc"><img src="./Pic/dc-shoes.png"></li>
           <li data-tab-target="#addidas"><img src="./Pic/adidas.png"></li>
           <li data-tab-target="#vans"><img src="./Pic/vans (1).png"></li>
@@ -459,7 +458,7 @@
 <div class="addidas" id="addidas" data-tab-content>
   <div class="shoe-container">
     <div class="image">
-     <img src="./Pic/nike-5099508_1280.jpg" alt=""> </a>
+     <img src="./Pic/universe-1772248_640.jpg" alt=""> </a>
       <div class="movie-desp">
         <h3>Addidas</h3>
         <h5>$100</h5>
