--- a/shoes.html
+++ b/shoes.html
@@ -26,9 +26,9 @@
             </div>
           </div>
           <button class="btn btn-outline-dark" type="submit">
-            <i class="bi-cart-fill me-1"></i>
-            Cart
-            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+            <i class="fas fa-shopping-cart"></i>
+            
+            <span class="badge bg-dark text-white ms-1 rounded-pill"></span>
           </button>
         </div>
       </nav>
@@ -55,7 +55,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./Pic/shoes-1246691_1920.jpg"  alt="...">
+            <img src="./Pic/sports-shoe-4378233_640.jpg"  alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h3>New Arrivals</h3>
               <p>Adidas Stan Smith</p>
