--- a/shoes.html
+++ b/shoes.html
@@ -42,21 +42,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./Pic/pexels-jordan-hyde-1032110.jpg"  alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-md-block">
               <h3>New Arrivals</h3>
               <p>Jordan 7 </p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./Pic/sneakers-1280.jpg"  alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-md-block">
               <h3>New Arrivals</h3>
               <p>Nike Airmax SC</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./Pic/sports-shoe-4378233_640.jpg"  alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-md-block">
               <h3>New Arrivals</h3>
               <p>Adidas Stan Smith</p>
             </div>
@@ -91,7 +91,7 @@
            <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
             <div class="movie-desp">
               <h3>Asics</h3>
-              <h5>$100</h5>
+              <h5>£100</h5>
               <button>ADD TO CART</button>
             </div>
           </div>
@@ -99,7 +99,7 @@
             <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
              <div class="movie-desp">
                <h3>Asics</h3>
-               <h5>$100</h5>
+               <h5>£100</h5>
                <button>ADD TO CART</button>
              </div>
            </div>
@@ -107,7 +107,7 @@
             <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
              <div class="movie-desp">
                <h3>Asics</h3>
-               <h5>$100</h5>
+               <h5>£100</h5>
                <button>ADD TO CART</button>
              </div>
            </div>
@@ -115,7 +115,7 @@
             <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
              <div class="movie-desp">
                <h3>Asics</h3>
-               <h5>$100</h5>
+               <h5>£100</h5>
                <button>ADD TO CART</button>
              </div>
            </div>
@@ -123,7 +123,7 @@
             <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
              <div class="movie-desp">
                <h3>Asics</h3>
-               <h5>$100</h5>
+               <h5>£100</h5>
                <button>ADD TO CART</button>
              </div>
            </div>
@@ -131,7 +131,7 @@
             <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
              <div class="movie-desp">
                <h3>Asics</h3>
-               <h5>$100</h5>
+               <h5>£100</h5>
                <button>ADD TO CART</button>
              </div>
            </div>
@@ -143,7 +143,7 @@
          <img src="./Pic/nike-5099508_1280.jpg" alt=""> </a>
           <div class="movie-desp">
             <h3>Jordan</h3>
-            <h5>$100</h5>
+            <h5>£100</h5>
             <button>ADD TO CART</button>
           </div>
         </div>
@@ -151,7 +151,7 @@
           <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
            <div class="movie-desp">
              <h3>Jordan</h3>
-             <h5>$100</h5>
+             <h5>£100</h5>
              <button>ADD TO CART</button>
            </div>
          </div>
@@ -159,7 +159,7 @@
           <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
            <div class="movie-desp">
              <h3>Jordan</h3>
-             <h5>$100</h5>
+             <h5>£100</h5>
              <button>ADD TO CART</button>
            </div>
          </div>
@@ -167,7 +167,7 @@
           <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
            <div class="movie-desp">
              <h3>Jordan</h3>
-             <h5>$100</h5>
+             <h5>£100</h5>
              <button>ADD TO CART</button>
            </div>
          </div>
@@ -175,7 +175,7 @@
           <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
            <div class="movie-desp">
              <h3>Jordan</h3>
-             <h5>$100</h5>
+             <h5>£100</h5>
              <button>ADD TO CART</button>
            </div>
          </div>
@@ -183,7 +183,7 @@
           <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
            <div class="movie-desp">
              <h3>Jordan</h3>
-             <h5>$100</h5>
+             <h5>£100</h5>
              <button>ADD TO CART</button>
            </div>
          </div>
@@ -196,7 +196,7 @@
        <img src="./Pic/nike-5099508_1280.jpg" alt=""> </a>
         <div class="movie-desp">
           <h3>Nike</h3>
-          <h5>$100</h5>
+          <h5>£100</h5>
           <button>ADD TO CART</button>
         </div>
       </div>
@@ -204,7 +204,7 @@
         <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
          <div class="movie-desp">
            <h3>Nike</h3>
-           <h5>$100</h5>
+           <h5>£100</h5>
            <button>ADD TO CART</button>
          </div>
        </div>
@@ -212,7 +212,7 @@
         <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
          <div class="movie-desp">
            <h3>Nike</h3>
-           <h5>$100</h5>
+           <h5>£100</h5>
            <button>ADD TO CART</button>
          </div>
        </div>
@@ -220,7 +220,7 @@
         <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
          <div class="movie-desp">
            <h3>Nike</h3>
-           <h5>$100</h5>
+           <h5>£100</h5>
            <button>ADD TO CART</button>
          </div>
        </div>
@@ -228,7 +228,7 @@
         <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
          <div class="movie-desp">
            <h3>Nike</h3>
-           <h5>$100</h5>
+           <h5>£100</h5>
            <button>ADD TO CART</button>
          </div>
        </div>
@@ -236,7 +236,7 @@
         <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
          <div class="movie-desp">
            <h3>Nike</h3>
-           <h5>$100</h5>
+           <h5>£100</h5>
            <button>ADD TO CART</button>
          </div>
        </div>
@@ -249,7 +249,7 @@
      <img src="./Pic/nike-5099508_1280.jpg" alt=""> </a>
       <div class="movie-desp">
         <h3>Puma</h3>
-        <h5>$100</h5>
+        <h5>£100</h5>
         <button>ADD TO CART</button>
       </div>
     </div>
@@ -257,7 +257,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Puma</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -265,7 +265,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Puma</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -273,7 +273,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Puma</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -281,7 +281,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Puma</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -289,7 +289,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Puma</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -302,7 +302,7 @@
      <img src="./Pic/nike-5099508_1280.jpg" alt=""> </a>
       <div class="movie-desp">
         <h3>Converse</h3>
-        <h5>$100</h5>
+        <h5>£100</h5>
         <button>ADD TO CART</button>
       </div>
     </div>
@@ -310,7 +310,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Converse</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -318,7 +318,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Converse</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -326,7 +326,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Converse</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -334,7 +334,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Converse</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -342,65 +342,14 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Converse</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
   </div>
 </div>
 
-<div class="reebok" id="reebok" data-tab-content>
-  <div class="shoe-container">
-    <div class="image">
-     <img src="./Pic/nike-5099508_1280.jpg" alt=""> </a>
-      <div class="movie-desp">
-        <h3>Reebok</h3>
-        <h5>$100</h5>
-        <button>ADD TO CART</button>
-      </div>
-    </div>
-    <div class="image">
-      <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
-       <div class="movie-desp">
-         <h3>Reebok</h3>
-         <h5>$100</h5>
-         <button>ADD TO CART</button>
-       </div>
-     </div>
-     <div class="image">
-      <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
-       <div class="movie-desp">
-         <h3>Reebok</h3>
-         <h5>$100</h5>
-         <button>ADD TO CART</button>
-       </div>
-     </div>
-     <div class="image">
-      <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
-       <div class="movie-desp">
-         <h3>Reebok</h3>
-         <h5>$100</h5>
-         <button>ADD TO CART</button>
-       </div>
-     </div>
-     <div class="image">
-      <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
-       <div class="movie-desp">
-         <h3>Reebok</h3>
-         <h5>$100</h5>
-         <button>ADD TO CART</button>
-       </div>
-     </div>
-     <div class="image">
-      <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
-       <div class="movie-desp">
-         <h3>Reebok</h3>
-         <h5>$100</h5>
-         <button>ADD TO CART</button>
-       </div>
-     </div>
-  </div>
-</div>
+
 
 <div class="dc" id="dc" data-tab-content>
   <div class="shoe-container">
@@ -408,7 +357,7 @@
      <img src="./Pic/nike-5099508_1280.jpg" alt=""> </a>
       <div class="movie-desp">
         <h3>DC</h3>
-        <h5>$100</h5>
+        <h5>£100</h5>
         <button>ADD TO CART</button>
       </div>
     </div>
@@ -416,7 +365,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>DC</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -424,7 +373,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>DC</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -432,7 +381,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>DC</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -440,7 +389,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>DC</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -448,7 +397,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>DC</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -461,7 +410,7 @@
      <img src="./Pic/universe-1772248_640.jpg" alt=""> </a>
       <div class="movie-desp">
         <h3>Addidas</h3>
-        <h5>$100</h5>
+        <h5>£100</h5>
         <button>ADD TO CART</button>
        
       </div>
@@ -470,7 +419,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Addidas</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -478,7 +427,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Addidas</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -486,7 +435,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Addidas</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -494,7 +443,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Addidas</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -502,7 +451,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Addidas</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -515,7 +464,7 @@
      <img src="./Pic/nike-5099508_1280.jpg" alt=""> </a>
       <div class="movie-desp">
         <h3>Vans</h3>
-        <h5>$100</h5>
+        <h5>£100</h5>
         <button>ADD TO CART</button>
       </div>
     </div>
@@ -523,7 +472,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Vans</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -531,7 +480,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Vans</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -539,7 +488,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Vans</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -547,7 +496,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Vans</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -555,7 +504,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Vans</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -568,7 +517,7 @@
      <img src="./Pic/nike-5099508_1280.jpg" alt=""> </a>
       <div class="movie-desp">
         <h3>Jordan</h3>
-        <h5>$100</h5>
+        <h5>£100</h5>
         <button>ADD TO CART</button>
       </div>
     </div>
@@ -576,7 +525,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Jordan</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -584,7 +533,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Jordan</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -592,7 +541,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Jordan</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -600,7 +549,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Jordan</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -608,7 +557,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Jordan</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -621,7 +570,7 @@
      <img src="./Pic/nike-5099508_1280.jpg" alt=""> </a>
       <div class="movie-desp">
         <h3>Jordan</h3>
-        <h5>$100</h5>
+        <h5>£100</h5>
         <button>ADD TO CART</button>
       </div>
     </div>
@@ -629,7 +578,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Jordan</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -637,7 +586,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Jordan</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -645,7 +594,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Jordan</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -653,7 +602,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Jordan</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
@@ -661,7 +610,7 @@
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
          <h3>Jordan</h3>
-         <h5>$100</h5>
+         <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
      </div>
