--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="container-hero">
     <div class="hero">
       <div class="heroImg">
-        <img src="./Pic/kicks-2213619_1920.jpg">
+        <img src="./Pic/kicks-2213619_1920-min.jpg">
       </div>
     </div>
 
