--- a/clothes.html
+++ b/clothes.html
@@ -93,7 +93,7 @@
     <div class="active" id="levis" data-tab-content>
         <div class="shoe-container">
           <div class="image">
-           <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+           <img src="./Pic/levistshirt.jpg" alt=""> </a>
             <div class="movie-desp">
               <h3>Levis</h3>
               <h5>£100</h5>
