--- a/clothes.html
+++ b/clothes.html
@@ -93,7 +93,7 @@
     <div class="active" id="levis" data-tab-content>
         <div class="shoe-container">
           <div class="image">
-           <img src="./Pic/levistshirt.jpg" alt=""> </a>
+           <img src="./Pic/levi-s-7.svg" alt=""> </a>
             <div class="movie-desp">
               <h3>Levis</h3>
               <h5>£100</h5>
@@ -264,63 +264,6 @@
     </div>
 </div>
 
-<div class="puma" id="puma" data-tab-content>
-  <div class="shoe-container">
-    <div class="image">
-     <img src="./Pic/nike-5099508_1280.jpg" alt=""> </a>
-      <div class="movie-desp">
-        <h3>Puma</h3>
-        <h5>£100</h5>
-        <button>ADD TO CART</button>
-      </div>
-    </div>
-
-    <div class="image">
-      <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
-       <div class="movie-desp">
-         <h3>Puma</h3>
-         <h5>£100</h5>
-         <button>ADD TO CART</button>
-       </div>
-     </div>
-
-     <div class="image">
-      <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
-       <div class="movie-desp">
-         <h3>Puma</h3>
-         <h5>£100</h5>
-         <button>ADD TO CART</button>
-       </div>
-     </div>
-
-     <div class="image">
-      <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
-       <div class="movie-desp">
-         <h3>Puma</h3>
-         <h5>£100</h5>
-         <button>ADD TO CART</button>
-       </div>
-     </div>
-
-     <div class="image">
-      <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
-       <div class="movie-desp">
-         <h3>Puma</h3>
-         <h5>£100</h5>
-         <button>ADD TO CART</button>
-       </div>
-     </div>
-
-     <div class="image">
-      <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
-       <div class="movie-desp">
-         <h3>Puma</h3>
-         <h5>£100</h5>
-         <button>ADD TO CART</button>
-       </div>
-     </div>
-  </div>
-</div>
 
 
 
@@ -330,7 +273,7 @@
     <div class="image">
      <img src="./Pic/nike-5099508_1280.jpg" alt=""> </a>
       <div class="movie-desp">
-        <h3>DC</h3>
+        <h3>UnderArmor</h3>
         <h5>£100</h5>
         <button>ADD TO CART</button>
       </div>
@@ -339,7 +282,7 @@
     <div class="image">
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
-         <h3>DC</h3>
+         <h3>UnderArmor</h3>
          <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
@@ -348,7 +291,7 @@
      <div class="image">
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
-         <h3>DC</h3>
+         <h3>UnderArmor</h3>
          <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
@@ -357,7 +300,7 @@
      <div class="image">
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
-         <h3>DC</h3>
+         <h3>UnderArmor</h3>
          <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
@@ -366,7 +309,7 @@
      <div class="image">
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
-         <h3>DC</h3>
+         <h3>UnderArmor</h3>
          <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
@@ -375,7 +318,7 @@
      <div class="image">
       <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
        <div class="movie-desp">
-         <h3>DC</h3>
+         <h3>UnderArmor</h3>
          <h5>£100</h5>
          <button>ADD TO CART</button>
        </div>
