--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
   </div>
   <div class="category" id="category">
     <div class="category-banner">
-      <a href="clothes.html"> <img src="./Pic/pexels-antonio-sokic-3839432.jpg"></a>
+      <a href="#"> <img src="./Pic/pexels-antonio-sokic-3839432.jpg"></a>
       <div class="button"><a href="#"> BUTTON </a></div>
     </div>
     <div class="category-banner">
-      <a href="shoes.html"> <img src="./Pic/pexels-deybson-mallony-4914808.jpg"></a>
+      <a href="#"> <img src="./Pic/pexels-deybson-mallony-4914808.jpg"></a>
       <div class="button"><a href="#"> BUTTON </a></div>
       
     </div>
