--- a/shoes.html
+++ b/shoes.html
@@ -94,7 +94,7 @@
     <div class="active" id="asics" data-tab-content>
         <div class="shoe-container">
           <div class="image">
-           <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+           <img src="./Pic/asics12.jpg" alt=""> </a>
             <div class="movie-desp">
               <h3>Asics</h3>
               <h5>£100</h5>
@@ -103,7 +103,7 @@
           </div>
 
           <div class="image">
-            <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+            <img src="./Pic/https___hypebeast.com_image_2020_06_asics-gel-lyte-iii-classic-lookbook-tw.jpg" alt=""> </a>
              <div class="movie-desp">
                <h3>Asics</h3>
                <h5>£100</h5>
@@ -112,7 +112,7 @@
            </div>
 
            <div class="image">
-            <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+            <img src="./Pic/461-4616480_gel-lyte-asics-gel-lyte.png" alt=""> </a>
              <div class="movie-desp">
                <h3>Asics</h3>
                <h5>£100</h5>
@@ -121,7 +121,7 @@
            </div>
 
            <div class="image">
-            <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+            <img src="./Pic/kicks-2213619_1920-min.jpg" alt=""> </a>
              <div class="movie-desp">
                <h3>Asics</h3>
                <h5>£100</h5>
@@ -130,7 +130,7 @@
            </div>
 
            <div class="image">
-            <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+            <img src="./Pic/kicks-2213619_1920-min.jpg" alt=""> </a>
              <div class="movie-desp">
                <h3>Asics</h3>
                <h5>£100</h5>
@@ -139,7 +139,7 @@
            </div>
 
            <div class="image">
-            <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+            <img src="./Pic/kicks-2213619_1920-min.jpg" alt=""> </a>
              <div class="movie-desp">
                <h3>Asics</h3>
                <h5>£100</h5>
@@ -151,7 +151,7 @@
     <div class="jordan" id="jordan" data-tab-content>
       <div class="shoe-container">
         <div class="image">
-         <img src="./Pic/nike-5099508_1280.jpg" alt=""> </a>
+         <img src="./Pic/jordan-point-lane-black-chrome-CZ4166-001-8.jpg" alt=""> </a>
           <div class="movie-desp">
             <h3>Jordan</h3>
             <h5>£100</h5>
@@ -160,7 +160,7 @@
         </div>
 
         <div class="image">
-          <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+          <img src="./Pic/jordon6.jpg" alt=""> </a>
            <div class="movie-desp">
              <h3>Jordan</h3>
              <h5>£100</h5>
@@ -169,7 +169,7 @@
          </div>
 
          <div class="image">
-          <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+          <img src="./Pic/jordon11.jpg" alt=""> </a>
            <div class="movie-desp">
              <h3>Jordan</h3>
              <h5>£100</h5>
@@ -178,7 +178,7 @@
          </div>
 
          <div class="image">
-          <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+          <img src="./Pic/jordan-point-lane-black-chrome-CZ4166-001-8.jpg" alt=""> </a>
            <div class="movie-desp">
              <h3>Jordan</h3>
              <h5>£100</h5>
@@ -187,7 +187,7 @@
          </div>
 
          <div class="image">
-          <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+          <img src="./Pic/NIKE_AIR_JORDAN_4_RETRO_BRED-mini.jpg" alt=""> </a>
            <div class="movie-desp">
              <h3>Jordan</h3>
              <h5>£100</h5>
@@ -196,7 +196,7 @@
          </div>
 
          <div class="image">
-          <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+          <img src="./Pic/kicks-2213619_1920-min.jpg" alt=""> </a>
            <div class="movie-desp">
              <h3>Jordan</h3>
              <h5>£100</h5>
@@ -218,7 +218,7 @@
       </div>
 
       <div class="image">
-        <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+        <img src="./Pic/anubhav-arora-g1vk_Bef2Xk-unsplash (1)-min.jpg" alt=""> </a>
          <div class="movie-desp">
            <h3>Nike</h3>
            <h5>£100</h5>
@@ -227,7 +227,7 @@
        </div>
 
        <div class="image">
-        <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+        <img src="./Pic/adrian-hernandez-QKP-fXB615w-unsplash-min.jpg" alt=""> </a>
          <div class="movie-desp">
            <h3>Nike</h3>
            <h5>£100</h5>
@@ -236,7 +236,7 @@
        </div>
 
        <div class="image">
-        <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+        <img src="./Pic/luis-felipe-lins-LG88A2XgIXY-unsplash-min.jpg" alt=""> </a>
          <div class="movie-desp">
            <h3>Nike</h3>
            <h5>£100</h5>
@@ -245,7 +245,7 @@
        </div>
 
        <div class="image">
-        <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+        <img src="./Pic/andres-jasso-PqbL_mxmaUE-unsplash-min.jpg" alt=""> </a>
          <div class="movie-desp">
            <h3>Nike</h3>
            <h5>£100</h5>
@@ -254,7 +254,7 @@
        </div>
 
        <div class="image">
-        <img src="./Pic/kicks-2213619_1920.jpg" alt=""> </a>
+        <img src="./Pic/jeremy-alford-1RUQrTgqt7g-unsplash-min.jpg" alt=""> </a>
          <div class="movie-desp">
            <h3>Nike</h3>
            <h5>£100</h5>
