--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <h3>Shop By Category</h3>
   </div>
   
-    <div class="category" id="category">
+    <div class="category">
     <div class="category-clothes">
       <a href="#"> <img src="./Pic/pexels-antonio-sokic-3839432.jpg"></a>
       <button class="btn-clothes">CLOTHING</button>
