--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="log">
-        <i class="fas fa-user-circle"></i>
+        <i class="fas fa-user-circle"><small>Login</small></i>
     </div>
     </div>
   </nav>
@@ -134,11 +134,11 @@
 
   <!--Category image section !--->
 
-  <div class="Category-header">
+  <div class="Category-header" id="category">
     <h3>Shop By Category</h3>
   </div>
   
-    <div class="category">
+    <div class="category" >
     <div class="category-clothes">
       <a href="#"> <img src="./Pic/pexels-antonio-sokic-3839432.jpg"></a>
       <button class="btn-clothes">CLOTHING</button>
