--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
      </div>
     
     <div class="category-banner">
-      <a href="shoes.html"> <img src="./Pic/pexels-deybson-mallony-4914808.jpg"></a>
+      <a href="#"> <img src="./Pic/pexels-deybson-mallony-4914808.jpg"></a>
       <button class="btn-category btn-cat">SHOES</button>
       </div>
   </div>
