--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <div class="img-container">
     <h2>Trending....</h2>
     <div id="slider" class="owl-carousel">
-      <div data-aos="fade-right">
+      <div data-aos="fade-up">
       <div class="cards">
         <img class="img-responsive" src="./Pic/pexels-jordan-hyde-1032110.jpg" alt="">
         <small>Yeezy</small>
@@ -117,7 +117,7 @@
       </div>
     </div>
 
-    <div data-aos="fade-left">
+    <div data-aos="fade-up">
       <div class="cards">
         
         <img class="img-responsive" src="./Pic/nike-3957127_1280.jpg" alt="">
@@ -126,7 +126,7 @@
         <button>View More</button>
       </div>
     </div>
-    <div data-aos="fade-left">
+    <div data-aos="fade-up">
       <div class="cards">
         <img class="img-responsive" src="./Pic/NIKE_AIR_JORDAN_4_RETRO_BRED-mini.jpg" alt="">
         <small>Jordan</small>
